# test-update-dependencies-without-lockfile

./: pyproject.toml
