[project]
name = "dependabot-poetry-repro"
version = "0.1.0"
description = ""
authors = [
    {name = "Abhishek Bhaskar",email = "abhishekbhaskar@github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (==2.2.5)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
